--- a/src/theme/default/src/default.css
+++ b/src/theme/default/src/default.css
@@ -1,8 +1,8 @@
-.mermaid {
+#mdOutput .mermaid {
     text-align: center;
 }
 
-.mermaid--error {
+#mdOutput .mermaid--error {
     background-color: lightcoral;
     color: white;
 }
