Add Github flavored Markdown stylesheet

--- a/src/theme/default/src/highlight.js.css
+++ b/src/theme/default/src/highlight.js.css
@@ -1,77 +1,94 @@
-.hljs {
+/* Style for highlight.js */
+.markdown .hljs {
     display: block;
     overflow-x: auto;
-    padding: .5em;
+    padding: 1em;
     color: #333;
     background: #f8f8f8
 }
 
-.hljs-comment, .hljs-quote {
+.markdown .hljs-comment,
+.markdown .hljs-quote {
     color: #998;
     font-style: italic
 }
 
-.hljs-keyword, .hljs-selector-tag, .hljs-subst {
+.markdown .hljs-keyword,
+.markdown .hljs-selector-tag,
+.markdown .hljs-subst {
     color: #333;
     font-weight: 700
 }
 
-.hljs-literal, .hljs-number, .hljs-tag .hljs-attr, .hljs-template-variable, .hljs-variable {
+.markdown .hljs-literal,
+.markdown .hljs-number,
+.markdown .hljs-tag .hljs-attr,
+.markdown .hljs-template-variable,
+.markdown .hljs-variable {
     color: teal
 }
 
-.hljs-doctag, .hljs-string {
+.markdown .hljs-doctag,
+.markdown .hljs-string {
     color: #d14
 }
 
-.hljs-section, .hljs-selector-id, .hljs-title {
+.markdown .hljs-section,
+.markdown .hljs-selector-id,
+.markdown .hljs-title {
     color: #900;
     font-weight: 700
 }
 
-.hljs-subst {
+.markdown .hljs-subst {
     font-weight: 400
 }
 
-.hljs-class .hljs-title, .hljs-type {
+.markdown .hljs-class .hljs-title,
+.markdown .hljs-type {
     color: #458;
     font-weight: 700
 }
 
-.hljs-attribute, .hljs-name, .hljs-tag {
+.markdown .hljs-attribute,
+.markdown .hljs-name,
+.markdown .hljs-tag {
     color: navy;
     font-weight: 400
 }
 
-.hljs-link, .hljs-regexp {
+.markdown .hljs-link,
+.markdown .hljs-regexp {
     color: #009926
 }
 
-.hljs-bullet, .hljs-symbol {
+.markdown .hljs-bullet,
+.markdown .hljs-symbol {
     color: #990073
 }
 
-.hljs-built_in, .hljs-builtin-name {
+.markdown .hljs-built_in,
+.markdown .hljs-builtin-name {
     color: #0086b3
 }
 
-.hljs-meta {
+.markdown .hljs-meta {
     color: #999;
     font-weight: 700
 }
 
-.hljs-deletion {
+.markdown .hljs-deletion {
     background: #fdd
 }
 
-.hljs-addition {
+.markdown .hljs-addition {
     background: #dfd
 }
 
-.hljs-emphasis {
+.markdown .hljs-emphasis {
     font-style: italic
 }
 
-.hljs-strong {
+.markdown .hljs-strong {
     font-weight: 700
 }
