--- a/src/theme/default/src/css/print.css
+++ b/src/theme/default/src/css/print.css
@@ -4,8 +4,8 @@
     }
 
     .right {
-        right: 0;
-        width: 100vw;
+        position: initial;
+        width: 100%;
     }
 
     .markdown-body pre code {
