Add exportToPDF beta func

--- a/src/theme/default/src/css/print.css
+++ b/src/theme/default/src/css/print.css
@@ -6,6 +6,8 @@
     .right {
         position: initial;
         width: 100%;
+        height: 100%;
+        overflow: visible;
     }
 
     .markdown-body pre code {
