Add insert Markdown & quit check related func

--- a/src/editor/editor.css
+++ b/src/editor/editor.css
@@ -58,6 +58,7 @@ body {
     padding: 1rem;
     font-size: medium;
     font-family: var(--system-font);
+    tab-size: 4;
     overflow-x: hidden;
     overflow-y: auto;
 }
